[project]
name = "mdabojbot"
version = "0.1.0"
description = "Тот самый токсичный бот в телеграм группе."
authors = [
    {name = "skv0zsneg",email = "klimentlamonov@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-decouple (>=3.8,<4.0)",
    "python-telegram-bot (>=22.5,<23.0)",
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "aiosqlite (>=0.21.0,<0.22.0)",
]

[tool.poetry.scripts]
demo-cli = "mdabojbot:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
